# dpcl-classifier

./: README.md  pyproject.toml
Main_code_AAAI25/: PCL_BinaryIRIS.py  PCL_convergence_all.py  PCL_convergence_balanced.py  TM_convergence_all.py  TM_convergence_balanced.py
dpcl_classifier/: BinaryIRIS.py  DPCL_Classifier_Conjunction.py  DPCL_ConvergenceTest.py  PCL_BinaryIRIS.py  PCL_Classification_breastcancer.py  PCL_ClassifierIRIS.py  PCL_Classifier_Conjunction.py  PCL_convergence.py  classifier.py  classifier_IRIS.py  classifier_fast.py  classifier_numba.py  classifier_numba_mc.py
dpcl_classifier/mx/: classifier_numba_2.py  numba_functions.py
example/: numba_demo.ipynb
